--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <header></header>
     <main class="flex">
         <h1>Fake Grocery Store</h1>
-        <button>AHHHHHHH</button>
+        <button>Button</button>
     </main>
     <footer></footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="dist/app.js"></script>
   </body>
 </html>
