--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <main class="flex">
         <h1>Fake Grocery Store</h1>
         <button>Button</button>
+        <div id="departments"></div>
     </main>
     <footer></footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
