--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header></header>
     <main class="flex">
         <h1>Fake Grocery Store</h1>
-        <button>Button</button>
         <div id="departments"></div>
+        <div id="items"></div>
     </main>
     <footer></footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
