--- a/index.html
+++ b/index.html
@@ -10,11 +10,24 @@
   </head>
   <body>
     <header></header>
+
     <main class="flex">
+      <div class="row">
         <h1>Fake Grocery Store</h1>
-        <div id="departments"></div>
-        <div id="items"></div>
+        <div class="col-xs-3">
+          <button id="go-to-departments" class="btn btn-default btn-lg col-xs-12">Return to Departments</button>
+        </div>
+        <div class="col-xs-3">
+          <button class="btn btn-info btn-lg col-xs-12">Cart</button>
+        </div>
+      </div>
+
+      <div id="departments"></div>
+      <div id="items"></div>
+      <div id="items"></div>
+
     </main>
+
     <footer></footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
