--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <div class="col-xs-3">
           <button id="go-to-departments" class="btn btn-default btn-lg col-xs-12">Return to Departments</button>
         </div>
-        <div class="col-xs-3">
-          <button class="btn btn-info btn-lg col-xs-12">Cart</button>
+        <div class="col-xs-3 col-xs-offset-6">
+          <button id="go-to-cart" class="btn btn-info btn-lg col-xs-12">Cart</button>
         </div>
       </div>
 
       <div id="departments"></div>
       <div id="items"></div>
-      <div id="items"></div>
+      <div id="cart"></div>
 
     </main>
 
